--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 requests==2.29.0
 flake8==6.0.0
-Flask==2.2.2
+Flask==3.0.3
+Flask-Cors==4.0.1
+Flask-SQLAlchemy==3.1.1
 langchain==0.2.14
 langchain-community==0.2.12
 langchain-core==0.2.32
@@ -9,3 +11,4 @@ chromadb==0.5.5
 openai==1.40.8
 PyMuPDF==1.24.9
 tiktoken==0.7.0
+Werkzeug==3.0.3
