--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,6 @@ openai==1.40.8
 PyMuPDF==1.24.9
 tiktoken==0.7.0
 Werkzeug==3.0.3
+python-dotenv==1.0.0       # To manage environment variables from a .env file
+PyPDF2==3.0.1              # To handle PDF processing
+pyodbc==4.0.39             # To connect to the Azure SQL Database using ODBC
