Adding the updated .env file

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,7 @@ OPENAI_API_KEY = your_openai_api_key_here
 DATABASE_URI = sqlite:///your_database.db
 SQLALCHEMY_DATABASE_URI = ""
 SQLALCHEMY_BINDS = ""
+AZURE_SQL_SERVER=metaanalysis-server.database.windows.net
+AZURE_SQL_DATABASE=MetaAnalysisPaper
+AZURE_SQL_USERNAME=sqladmin
+AZURE_SQL_PASSWORD=Admin@123
