--- a/meta-analysis-ui/angular.json
+++ b/meta-analysis-ui/angular.json
@@ -65,6 +65,11 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "ssl": false,
+            "sslCert": "./ssl/server.crt",
+            "sslKey": "./ssl/server.key"
+          },
           "configurations": {
             "production": {
               "buildTarget": "meta-analysis-ui:build:production"
