--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "appService.defaultWebAppToDeploy": "/subscriptions/8288d21a-95cc-4b00-9e21-5d88f9236ddc/resourceGroups/front-end-DEV/providers/Microsoft.Web/sites/MetaAnalysis",
-    "appService.deploySubpath": "meta-analysis-ui\\dist"
+    "appService.showBuildDuringDeployPrompt": false,
+    "appService.defaultWebAppToDeploy": "/subscriptions/8288d21a-95cc-4b00-9e21-5d88f9236ddc/resourceGroups/backend_group/providers/Microsoft.Web/sites/BackendAPI",
+    "appService.deploySubpath": "backend"
 }
