--- a/meta-analysis-ui/package.json
+++ b/meta-analysis-ui/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
