First implementation of Backend for login

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,8 @@ AZURE_SQL_SERVER=metaanalysis-server.database.windows.net
 AZURE_SQL_DATABASE=MetaAnalysisPaper
 AZURE_SQL_USERNAME=sqladmin
 AZURE_SQL_PASSWORD=Admin@123
+TENANT_NAME=your_tenant_name
+CLIENT_ID=your_client_id
+CLIENT_SECRET=your_client_secret
+B2C_POLICY_NAME=your_policy_name
+FLASK_SECRET_KEY=your_flask_secret_key
