--- a/meta-analysis-app/package.json
+++ b/meta-analysis-app/package.json
@@ -16,8 +16,10 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "bootstrap": "^5.3.3",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "recharts": "^2.13.2"
@@ -30,7 +32,8 @@
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
-    "postcss": "^8.4.47",
+    "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.14",
     "webpack": "^5.95.0",
