--- a/.github/workflows/ci-pipline.yml
+++ b/.github/workflows/ci-pipline.yml
@@ -3,22 +3,23 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - be3
+      - be3  # Runs the workflow when code is pushed to the be3 branch
   pull_request:
     branches:
-      - main
+      - main  # Also runs when a PR is made to merge branch into main
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # The workflow runs in an Ubuntu virtual machine
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3  # Pulls the latest code from the repo
 
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v3  # Installs Python on the runner
         with:
-          python-version: "3.11"
+          python-version: "3.11"  # Specifies the Python version to use
 
       - name: Install dependencies
         run: |
@@ -27,4 +28,4 @@ jobs:
           poetry install
 
       - name: Run tests
-        run: poetry run pytest
+        run: poetry run pytest  # Executes tests using pytest to verify the code
