changed semantic scholar code using PICO with manual url and ai url to format query and search papers

--- a/be1-api-and-scibert/.env
+++ b/be1-api-and-scibert/.env
@@ -8,4 +8,4 @@ SERV_PUBLIC_IP=https://meta-analysis-brhwewftaahwhcc8.eastus2-01.azurewebsites.n
 SERV_PORT=8000
 
 # LLM
-OPENAI_KEY=
+OPENAI_API_KEY = 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
