--- a/be1-api-and-scibert/.gitignore
+++ b/be1-api-and-scibert/.gitignore
@@ -1,8 +1,23 @@
+# Ignore virtual environments
+env/
+.venv/
+venv/
+
 # Ignore Python bytecode files
 **/__pycache__/
-
-# Ignore other Python-related files
 *.pyc
 *.pyo
+*.pyd
 
-env/
+# Ignore Jupyter Notebook checkpoints
+**/.ipynb_checkpoints
+
+# Ignore local development settings
+.vscode/
+.idea/
+*.env
+
+# Ignore build and distribution files
+build/
+dist/
+*.egg-info/
