--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Deploy to Azure Web App (Frontend)
         uses: azure/webapps-deploy@v2
         with:
-          app-name: "meta-analysis"  # Change this to your Azure frontend app name
+          app-name: "meta-analysis"
           slot-name: "production"
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND }}
           package: meta-analysis-app/dist  # This is the frontend build output folder
