--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,18 +3,18 @@ flake8==6.0.0
 Flask==3.0.3
 Flask-Cors==4.0.1
 Flask-SQLAlchemy==3.1.1
-langchain==0.2.14
-langchain-community==0.2.12
-langchain-core==0.2.32
-langchain-text-splitters==0.2.2
+langchain
+langchain-community
+langchain-core
+langchain-text-splitters
 chromadb==0.5.5
 openai==1.40.8
 PyMuPDF==1.24.9
 tiktoken==0.7.0
 Werkzeug==3.0.3
-python-dotenv==1.0.0       # To manage environment variables from a .env file
-PyPDF2==3.0.1              # To handle PDF processing
-pyodbc==4.0.39             # To connect to the Azure SQL Database using ODBC
+python-dotenv==1.0.0
+PyPDF2==3.0.1
+pyodbc==4.0.39
 gunicorn
-langchain_openai==0.3.7
+langchain_openai
 pandas==2.2.3
