--- a/be1-api-and-scibert/requirements.txt
+++ b/be1-api-and-scibert/requirements.txt
@@ -9,19 +9,27 @@ arrow==1.3.0
 asttokens==2.4.1
 async-lru==2.0.4
 async-timeout==5.0.1
+attrs==25.1.0
 autocommand==2.2.2
 babel==2.17.0
 backports.tarfile==1.2.0
 beautifulsoup4==4.13.3
 bleach==6.2.0
 blinker==1.8.2
+blis==1.2.0
+catalogue==2.0.10
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+cloudpathlib==0.20.0
 comm==0.2.2
+confection==0.1.5
+cymem==2.0.11
 datasets==3.3.0
 debugpy==1.8.5
 decorator==5.1.1
+defusedxml==0.7.1
 dill==0.3.8
 distro==1.9.0
 dnspython==2.7.0
@@ -30,6 +38,7 @@ exceptiongroup==1.2.2
 executing==2.1.0
 fastapi==0.115.8
 fastapi-cli==0.0.7
+fastjsonschema==2.21.1
 filelock==3.17.0
 fqdn==1.5.1
 frozenlist==1.5.0
@@ -61,6 +70,8 @@ jiter==0.8.2
 joblib==1.4.2
 json5==0.10.0
 jsonpointer==2.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 jupyter==1.1.1
 jupyter-console==6.6.3
 jupyter-events==0.12.0
@@ -73,17 +84,23 @@ jupyterlab==4.3.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
+langcodes==3.5.0
+language_data==1.3.0
 lz4==4.3.3
+marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.1.1
+more-itertools==10.6.0
 mpmath==1.3.0
 multidict==6.1.0
 multiprocess==0.70.16
+murmurhash==1.0.12
 nbclient==0.10.2
 nbconvert==7.16.6
+nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.4.2
 notebook==7.3.2
@@ -119,6 +136,7 @@ platformdirs==4.2.2
 playwright==1.50.0
 pluggy==1.5.0
 ply==3.11
+preshed==3.0.9
 prometheus_client==0.21.1
 prompt_toolkit==3.0.47
 propcache==0.2.1
@@ -128,12 +146,16 @@ psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==19.0.0
+pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 pyee==12.1.1
 Pygments==2.19.1
 PyQt5==5.15.10
+PyQt5-Qt5==5.15.16
+PyQt5_sip==12.17.0
 PyQtWebEngine==5.15.6
+PyQtWebEngine-Qt5==5.15.16
 pytest==8.3.2
 pytest-base-url==2.1.0
 pytest-playwright==0.5.1
@@ -142,26 +164,36 @@ python-dotenv==1.0.1
 python-json-logger==3.2.1
 python-multipart==0.0.20
 python-slugify==8.0.4
+pytz==2025.1
 PyYAML==6.0.2
 pyzmq==26.2.0
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.9.4
 rich-toolkit==0.13.2
+rpds-py==0.23.1
 safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.15.1
 Send2Trash==1.8.3
+sentence-transformers==3.4.1
 shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
 sniffio==1.3.1
 soupsieve==2.6
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
 stack-data==0.6.3
 starlette==0.45.3
 sympy==1.13.1
 terminado==0.18.1
 text-unidecode==1.3
+thinc==8.3.4
 threadpoolctl==3.5.0
 tinycss2==1.4.0
 tokenizers==0.21.0
@@ -183,13 +215,17 @@ uri-template==1.3.0
 urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
+wasabi==1.1.3
 watchfiles==1.0.4
 wcwidth==0.2.13
+weasel==0.4.1
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 websockets==14.2
 Werkzeug==3.0.3
 widgetsnbextension==4.0.13
+wrapt==1.17.2
 xxhash==3.5.0
 yarl==1.18.3
+zipp==3.21.0
